# lora-experiments

./: .gitignore  INSTALL.md  README.md  pyproject.toml
notebooks/: .env.example  001-baseline-mnist.py  001-baseline_llama.py  001-lora-demo.py  002-lora-mnist-comparison.py  002-lora_llama.py  003-compare_results.py  004-full_vs_lora_batch_demo.py  batch_comparison_1756759401.json  results_baseline_1756755949.json  results_lora_1756756758.json
