[project]
name = "lora-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "peft @ git+https://github.com/huggingface/peft",
    "transformers>=4.56.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "tensorboard>=2.20.0",
    "tqdm",
    "numpy",
    "nvitop>=1.5.3",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "python-dotenv>=1.0.0",
    "accelerate>=1.0.0",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]
